update security and add users
