# src/main/java/org/com/hub/caixa/model/User.java
@@ -1,0 +1,33 @@
+package org.com.hub.caixa.model;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.util.List;
+import java.util.UUID;
+
+@Entity
+@Table(name = "users")
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class User {
+    @Id
+    @GeneratedValue
+    private UUID id;
+    @Column(nullable = false, unique = true)
+    private String username;
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false)
+    private RoleEnum role;
+    @OneToMany(mappedBy = "createdBy")
+    private List<Loan> loans;
+
+    public enum RoleEnum {
+        CLIENT,
+        MANAGER
+
+    }
+}
