# src/main/resources/api.yaml
@@ -108,6 +108,41 @@ paths:
         '404':
           description: Loan not found
 
+  /auth/me:
+    get:
+      summary: Show the user information
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          description: Authenticated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+
+  /users:
+    post:
+      tags: [Users]
+      summary: Create new user
+      description: Only managers can create users
+      operationId: createUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDTO'
+      responses:
+        '201':
+          description: User created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        '403':
+          description: Forbidden
+
 components:
   schemas:
     LoanDTO:
@@ -139,6 +174,25 @@ components:
           format: timestamp
         status:
           $ref: '#/components/schemas/LoanStatus'
+
+    UserDTO:
+      type: object
+      required:
+        - username
+        - role
+      properties:
+        id:
+          type: string
+          format: uuid
+        username:
+          type: string
+          example: John Doe
+        role:
+          type: string
+          description: Role of the user
+          enum: [ CLIENT, MANAGER ]
+          example: CLIENT
+
 
     LoanStatus:
       type: string
